--- a/themes/custom/apigee_kickstart/src/components/title-bar/_title-bar.scss
+++ b/themes/custom/apigee_kickstart/src/components/title-bar/_title-bar.scss
@@ -34,6 +34,8 @@
   }
 
   svg.svg-inline--fa {
+    align-items: center;
+    display: flex;
     height: 18px;
     width: 18px;
 
